--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "lint": "run-s lint:*"
   },
   "dependencies": {
+    "express": "^5.1.0",
+    "mongoose": "^8.13.1",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
