--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "lint": "run-s lint:*"
   },
   "dependencies": {
+    "node": "^18.20.8",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
